kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: Bhasha
  labels:
    app.kubernetes.io/name: Bhasha
    app.kubernetes.io/managed-by: kustomize
