kubernetes/base/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: Bhasha-client
  namespace: Bhasha
  labels:
    app: Bhasha
    component: client
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: Bhasha
    component: client
